--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body{font-family: Josefin Sans;}blockquote{border-color: #4e84c2;}div[submit-suc
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link mbr-semibold link text-black display-4" href="#">ABOUT US</a>
+						<a class="nav-link mbr-semibold link text-black display-4" href="https://sheet.zoho.com/sheet/published.do?rid=e38vt436db20a3b0548039d7e9fc4f4d0a0b4&amp;mode=embed" target="_blank">ABOUT US</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link mbr-semibold link text-black display-4" href="#">CONTACT</a>
@@ -98,7 +98,7 @@ body{font-family: Josefin Sans;}blockquote{border-color: #4e84c2;}div[submit-suc
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link mbr-semibold link text-black display-4" href="#">ABOUT US</a>
+						<a class="nav-link mbr-semibold link text-black display-4" href="https://sheet.zoho.com/sheet/published.do?rid=e38vt436db20a3b0548039d7e9fc4f4d0a0b4&amp;mode=embed" target="_blank">ABOUT US</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link mbr-semibold link text-black display-4" href="#">CONTACT</a>
